--- a/lib/generators/templates/establishment.erb
+++ b/lib/generators/templates/establishment.erb
@@ -1,7 +1,8 @@
 module BeerList
   module Establishments
     class <%= @klass %> < Establishment
-      URL = '<%= @url %>'
+      URL     = '<%= @url %>'
+      ADDRESS = <%= @address.inspect %>
 
       # Handles parsing and manipulating a Mechanize::Page object
       # in order to scrape the contents of your beer list.
@@ -13,6 +14,10 @@ module BeerList
 
       def url
         URL
+      end
+
+      def address
+        ADDRESS
       end
     end
   end
